--- a/exts/omni.cv-video.example/config/extension.toml
+++ b/exts/omni.cv-video.example/config/extension.toml
@@ -32,6 +32,7 @@ preview_image = "data/preview.png"
 [dependencies]
 "omni.kit.uiapp" = {}
 "omni.kit.pipapi" = {}
+"omni.warp" = {}
 
 [python.pipapi]
 requirements = [
